# orderbook_3d

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/data/BinancePerp/BTCUSDT/: 5404621538288_Snapshot_Ask.parquet  5404621538288_Snapshot_Bid.parquet  5404621686720_Delta_Ask.parquet  5404621686720_Delta_Bid.parquet  5404621696692_Delta_Ask.parquet  5404621696692_Delta_Bid.parquet  5404621705341_Delta_Ask.parquet  5404621705341_Delta_Bid.parquet  5404621713458_Delta_Ask.parquet  5404621713458_Delta_Bid.parquet  5404621730622_Delta_Ask.parquet  5404621730622_Delta_Bid.parquet  5404621752254_Delta_Ask.parquet  5404621752254_Delta_Bid.parquet  5404621764562_Delta_Ask.parquet  5404621764562_Delta_Bid.parquet  5404621772808_Delta_Ask.parquet  5404621772808_Delta_Bid.parquet  5404621778449_Delta_Ask.parquet  5404621778449_Delta_Bid.parquet  5404621783770_Delta_Ask.parquet  5404621783770_Delta_Bid.parquet  5404621790314_Delta_Ask.parquet  5404621790314_Delta_Bid.parquet  5404621795366_Delta_Ask.parquet  5404621795366_Delta_Bid.parquet  5404621799120_Delta_Ask.parquet  5404621799120_Delta_Bid.parquet  5404621802573_Delta_Ask.parquet  5404621802573_Delta_Bid.parquet  5404621806347_Delta_Ask.parquet  5404621806347_Delta_Bid.parquet  5404621809443_Delta_Ask.parquet  5404621809443_Delta_Bid.parquet  5404621812622_Delta_Ask.parquet  5404621812622_Delta_Bid.parquet  5404621826929_Delta_Ask.parquet  5404621826929_Delta_Bid.parquet  5404621839073_Delta_Ask.parquet  5404621839073_Delta_Bid.parquet  (+18840 more)
src/: main.rs
(+41063 files in other folders)
