[package]
name = "orderbook_3d"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[package.metadata.cargo-machete]
ignored = ["derive-new", "eyre", "serde", "tokio", "v_utils"]

[lints.clippy]
float_cmp = "allow" # is bad for `==` direct comparisons, but `<` and `>` should be allowed
#get_first = "allow" # const fn, so actually more performant
len_zero = "allow" # `.empty()` is O(1) but on &str only
undocumented_unsafe_blocks = "warn"

[dependencies]
aggr_orderbook = { path = "/home/v/s/aggr_orderbook" }
bevy = "^0.14.2"
bevy_panorbit_camera = { version = "0.19.3" } #, features = ["bevy_egui"] }
color-eyre = "^0.6.3"
derive-new = "^0.7.0"
tokio = { version = "1.40.0", features = ["full"] }
v_utils = { version = "1.7.3", features = ["io"], path = "/home/v/s/v_utils/v_utils" }
